--- a/doc/regular_expressions.ipynb
+++ b/doc/regular_expressions.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -594,14 +594,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020 7\n"
+      "2019 7\n"
      ]
     }
    ],
@@ -617,7 +617,11 @@
     "        res.in_phone_year = curr_year - d\n",
     "    elif m == 'month':\n",
     "        res.in_phone_year = curr_year - int(d / 12)\n",
-    "        res.in_phone_month = (curr_month - d) % 12\n",
+    "        res.in_phone_month = curr_month - (d % 12)\n",
+    "        if res.in_phone_month <= 0:\n",
+    "            month_diff = abs(res.in_phone_month)\n",
+    "            res.in_phone_month = 12 - month_diff\n",
+    "            res.in_phone_year -= 1\n",
     "\n",
     "print(res.in_phone_year, res.in_phone_month)"
    ]
@@ -633,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +650,7 @@
     }
    ],
    "source": [
-    "res.re_from_date = re.compile(r'(?:\\s|^)(?:since|from)\\s(?:(january|february|march|april|may|june|july|august|september|october|november|december)\\s)?(\\d\\d{2,4})')\n",
+    "res.re_from_date = re.compile(r'(?:\\s|^)(?:since|from)\\s(?:(january|february|march|april|may|june|july|august|september|october|november|december)\\s)?(\\d{2,4})')\n",
     "\n",
     "print(regex_matcher(res.re_from_date, 'since september 2018'))\n",
     "print(regex_matcher(res.re_from_date, 'from 2017'))"
@@ -661,14 +665,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'january': 1,\n",
+       " 'february': 2,\n",
+       " 'march': 3,\n",
+       " 'april': 4,\n",
+       " 'may': 5,\n",
+       " 'june': 6,\n",
+       " 'july': 7,\n",
+       " 'august': 8,\n",
+       " 'september': 9,\n",
+       " 'october': 10,\n",
+       " 'november': 11,\n",
+       " 'december': 12}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res.d_month_to_number = {\n",
     "    month: i for i, month in enumerate(\n",
     "        ['january','february','march','april','may','june',\n",
-    "         'july','august','september','october','november','december'], 1)}"
+    "         'july','august','september','october','november','december'], start=1)}\n",
+    "res.d_month_to_number"
    ]
   },
   {
@@ -680,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +801,11 @@
     "            res.in_phone_year = curr_year - d\n",
     "        elif m == 'month':\n",
     "            res.in_phone_year = curr_year - int(d / 12)\n",
-    "            res.in_phone_month = (curr_month - d) % 12\n",
+    "            res.in_phone_month = curr_month - (d % 12)\n",
+    "            if res.in_phone_month <= 0:\n",
+    "                month_diff = abs(res.in_phone_month)\n",
+    "                res.in_phone_month = 12 - month_diff\n",
+    "                res.in_phone_year -= 1\n",
     "    elif any(from_date):\n",
     "        res.in_phone_year = int(from_date[1])\n",
     "        res.in_phone_month = res.d_month_to_number[from_date[0]] if from_date[0] else 1\n",
@@ -799,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -807,11 +838,11 @@
      "output_type": "stream",
      "text": [
       "S: are you using a smartphone?\n",
-      "U: yes, i have an iphone\n",
+      "U: yes i have an iphone\n",
       "S: how long have you been using iphone?\n",
       "U: about 2 years\n",
       "S: oh, are you using iphone 10s or 10s max?\n",
-      "U: no, i'm using iphone 6s plus\n",
+      "U: no i'm using iphone 6s plus\n",
       "S: good bye!\n"
      ]
     }
@@ -844,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +937,7 @@
      "output_type": "stream",
      "text": [
       "S: are you using a smartphone?\n",
-      "U: yes, i have an iphone\n",
+      "U: yes i have an iphone\n",
       "S: how long have you been using iphone?\n",
       "U: about 2 years\n",
       "S: oh, are you using iphone 10s or 10s max?\n",
@@ -933,9 +964,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:emora_cobot_env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-emora_cobot_env-py"
   },
   "language_info": {
    "codemirror_mode": {
