updated dialogue management

--- a/doc/regular_expressions.ipynb
+++ b/doc/regular_expressions.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -637,22 +637,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['september', '2018']\n",
+      "['September', '2018']\n",
       "[None, '2017']\n"
      ]
     }
    ],
    "source": [
-    "res.re_from_date = re.compile(r'(?:\\s|^)(?:since|from)\\s(?:(january|february|march|april|may|june|july|august|september|october|november|december)\\s)?(\\d{2,4})')\n",
+    "res.re_from_date = re.compile(r'(?:\\s|^)(?:since|from)\\s(?:(january|february|march|april|may|june|july|august|[sS]eptember|october|november|december)\\s)?(\\d{2,4})')\n",
     "\n",
-    "print(regex_matcher(res.re_from_date, 'since september 2018'))\n",
+    "print(regex_matcher(res.re_from_date, 'since September 2018'))\n",
     "print(regex_matcher(res.re_from_date, 'from 2017'))"
    ]
   },
