trying to upload pics

--- a/doc/dialogue_management.ipynb
+++ b/doc/dialogue_management.ipynb
@@ -447,7 +447,7 @@
     "pycharm": {}
    },
    "source": [
-    "<img src=\"res/whole_conv.jpg\" />![](res/whole_conv.jpg)"
+    "<img src=\"res/whole_conv.jpg\" />"
    ]
   },
   {
@@ -2144,7 +2144,7 @@
     "pycharm": {}
    },
    "source": [
-    "<img src=\"res/small_conv.jpg\" />![](res/small_conv.jpg)"
+    "<img src=\"res/small_conv.jpg\" />"
    ]
   },
   {
@@ -2264,7 +2264,7 @@
     "pycharm": {}
    },
    "source": [
-    "<img src=\"res/ont.jpg\" />![](res/ont.jpg)"
+    "<img src=\"res/ont.jpg\" />"
    ]
   },
   {
