--- a/doc/dialogue_management.ipynb
+++ b/doc/dialogue_management.ipynb
@@ -2428,9 +2428,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:emora_cobot_env] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-emora_cobot_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
