Updated sequence tagging.

--- a/doc/ontology_taxonomy.ipynb
+++ b/doc/ontology_taxonomy.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to /Users/jdchoi/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
@@ -68,7 +68,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        " Synset('chase.v.01')]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        " Synset('andiron.n.01')]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,25 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
     }
    ],
    "source": [
     "dog_0 = wn.synset('dog.n.01')\n",
     "\n",
-    "Synset == dogs[0]\n",
-    "Synset == dogs[1]"
+    "print(dog_0 == dogs[0])\n",
+    "print(dog_0 == dogs[1])"
    ]
   },
   {
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +217,7 @@
        " Synset('working_dog.n.01')]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +244,7 @@
        "[Synset('canine.n.02'), Synset('domestic_animal.n.01')]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +293,7 @@
        "  Synset('dog.n.01')]]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +324,7 @@
        " Lemma('dog.n.01.Canis_familiaris')]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +421,7 @@
     "Write a function that takes a word and an optional POS tag, and returns the set of all synonyms of the word:\n",
     "\n",
     "```python\n",
-    "def synonyms(word: str, pos: Optional[str]=None, count: Optional[int]=0) -> Set[str]:\n",
+    "def synonyms(word: str, pos: Optional[str]=None, count: int=0) -> Set[str]:\n",
     "    # To be filled\n",
     "```"
    ]
@@ -465,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +512,7 @@
        " 'wienerwurst'}"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +532,7 @@
        "{'dog', 'hound'}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +552,7 @@
        "{'chase', 'dog', 'go_after', 'hound', 'track', 'trail'}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -601,8 +599,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -610,7 +610,7 @@
        "[Synset('carnivore.n.01')]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -686,10 +686,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'a', 1: 'b', 2: 'd'}\n",
+      "{0: 'a', 1: 'b', 2: 'c', 3: 'd'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "\n",
+    "for i in range(4):\n",
+    "    l.append(i)\n",
+    "\n",
+    "l = [(0,'a'), (1,'b'), (2,'c'), (2,'d')]\n",
+    "\n",
+    "d = {i:s for i, s in l}\n",
+    "# d = {t for t in l}\n",
+    "print(d)\n",
+    "\n",
+    "l = ['a','b','c','d']\n",
+    "d = {i:s for  i, s in enumerate(l)}\n",
+    "print(d)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -700,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,16 +739,17 @@
     "    paths = []\n",
     "\n",
     "    for hypernym in lch:\n",
-    "        for syn_list in hypernym_paths_0:\n",
-    "            i = next((i for i, syn in enumerate(syn_list) if syn == hypernym), -1)\n",
-    "            if i >= 0: paths.append(syn_list[:i+1])\n",
+    "        paths.extend(hypernym.hypernym_paths())\n",
+    "#         for syn_list in hypernym_paths_0:\n",
+    "#             i = next((i for i, syn in enumerate(syn_list) if syn == hypernym), -1)\n",
+    "#             if i >= 0: paths.append(syn_list[:i+1])\n",
     "\n",
     "    return paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
