Update regular expressions

--- a/doc/regular_expressions.ipynb
+++ b/doc/regular_expressions.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -120,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Mr.', 'Wayne', 'is', \"n't\", 'the', 'hero', 'we', 'need', ',', 'but', '\"', 'the', 'one', '\"', 'we', 'deserve', '.']\n"
+      "['Mr.', 'Wayne', 'is', 'Batman']\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
     "new_tokens = []\n",
     "for token in tokens:\n",
     "    start = next((t for t in STARTS if token.startswith(t)), None)\n",
-    "    if start:\n",
+    "    if start:  # TODO: potential bug?\n",
     "        n = len(start)\n",
     "        t1 = token[:n]\n",
     "        t2 = token[n:]\n",
@@ -163,6 +163,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The first parameter in the `next()` function creates an iterator:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x7fe6000f3ac0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = (t for t in STARTS if token.startswith(t))\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* [List Comprehensions](https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions)\n",
     "* [More on Lists](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)\n",
     "* [`next(iterator[, default])`](https://docs.python.org/3/library/functions.html#next)"
@@ -179,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,19 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ms', '.', 'Wayne', 'is', '\"', 'Batgirl\"', 'but', 'not', '\"', 'the', 'one\"', '.']\n"
+      "['Mr.', 'Wayne', 'is', \"n't\", 'the', 'hero', 'we', 'need', ',', 'but', '\"', 'the', 'one', '\"', 'we', 'deserve', '.']\n"
      ]
     }
    ],
    "source": [
-    "print(tokenize_strmat_0(text))"
+    "tokenize_strmat_0(text)"
    ]
   },
   {
@@ -238,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
